SDM-2829: Replace javax.annotation with org.jspecify.annotations. (#185)